change and add more file